# propack

./: .gitignore  Makefile  README.md  pyproject.toml
src/propack/: __init__.py  bitreader.py  bits.py  bitwriter.py  cli.py  constants.py  crc.py  header.py  lz.py  pack.py  unpack.py
tests/: test_pack.py  test_unpack.py
tests/fixtures/: 100.expected  100.rnc1  pack1.expected  pack1.rnc1  pack1.rnc2  pack2.expected  pack2.rnc1  pack2.rnc2
