[project]
name = "propack"
description = "PRO-PACK implementation in Python"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.10"
keywords = ["propack", "compression", "packing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.scripts]
propack = "propack.cli:main"

[project.urls]
Homepage = "https://bitplane.net/dev/python/propack"
Repository = "https://github.com/bitplane/propack"
Issues = "https://github.com/bitplane/propack/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
